@@ -13,9 +13,17 @@ be read in 'help patchlevels'.
 
 Version 1.8.5 patchlevel 1                                 ??? ??, 2012
 
+Fixes:
+ * When regexp matching an ansi'd string, named captures weren't set at all.
+   For non-ansi'd strings, non-named (numeric) captures were sometimes 
+   overwritten with the values of named captures. Reported by Sketch. [MG]
+
 Minor changes:
  * Logged messages now have events in the LOG tree. Suggested by
    Padraic. [SW]
+ * Objects belonging to destroyed players now get chowned to a
+   configurable player (probate_judge in mush.cnf) instead of
+   God. [SW]
 
 & 1.8.5p0
 Version 1.8.5 patchlevel 0                                 Feb 12, 2012
