@@ -1283,6 +1283,7 @@ pe_regs_set_rx_context(PE_REGS *pe_regs,
     buff[0] = '\0';
     pcre_copy_substring(re_from, re_offsets, re_subpatterns,
                         i, buff, BUFFER_LEN);
+notify_format(1, "Setting %d/%s to '%s'", i, pe_regs_intname(i), buff);
     pe_regs_set(pe_regs, PE_REGS_REGEXP, pe_regs_intname(i), buff);
   }
   /* Copy all the named captures over. This code is ganked from
@@ -1305,7 +1306,10 @@ pe_regs_set_rx_context(PE_REGS *pe_regs,
     buff[0] = '\0';
     pcre_copy_substring(re_from, re_offsets, re_subpatterns,
                         num, buff, BUFFER_LEN);
-    pe_regs_set(pe_regs, PE_REGS_REGEXP, pe_regs_intname(i), buff);
+    /* we don't need to do this, as it's done in the 'numbered captures'
+     * for loop above.
+    pe_regs_set(pe_regs, PE_REGS_REGEXP, unparse_integer(num), buff);
+    */
     pe_regs_set(pe_regs, PE_REGS_REGEXP, (char *) entry + 2, buff);
 
   }
@@ -1359,7 +1363,11 @@ pe_regs_set_rx_context_ansi(PE_REGS *pe_regs,
     ansi_pcre_copy_substring(re_from, re_offsets, re_subpatterns,
                              num, 1, buff, &bp);
     *bp = '\0';
-    pe_regs_set(pe_regs, PE_REGS_REGEXP, pe_regs_intname(i), buff);
+    /* we don't need to do this, as it's done in the 'numbered captures'
+     * for loop above.
+    pe_regs_set(pe_regs, PE_REGS_REGEXP, unparse_integer(num), buff);
+    */
+    pe_regs_set(pe_regs, PE_REGS_REGEXP, (char *) entry + 2, buff);
   }
 }
 
